<resources>
    <string name="app_name">EdicionGraficaEsperemosDefinitiva</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="anyir_lolo">anyir lolo</string>
    <string name="del">DEL</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="x">x</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_Meno">-</string>
    <string name="_0">0</string>
    <string name="coma">,</string>
    <string name="igual">=</string>
    <string name="division">/</string>
    <string name="porc">%</string>
    <string name="dele">◀</string>
    <string name="c">C</string>
    <string name="suma">+</string>
    <string name="guardar">Guardar</string>
    <string name="calendario">Calendario</string>
    <string name="icono_de_la_app_matavise">Icono de la App MataVise</string>
    <string name="start">Start</string>
    <string name="game">Game</string>
</resources>